Fix more headline sizes on mobile

--- a/source/stylesheets/application.scss
+++ b/source/stylesheets/application.scss
@@ -26,6 +26,10 @@ p {
 h2, h3 {
   margin-bottom: .5rem;
   line-height: 33px;
+  @include gridle_state(small) {
+    font-size: 24px;
+    line-height: 31px;
+  }
 }
 
 header, p {
@@ -34,7 +38,7 @@ header, p {
 
 p {
   @include gridle_state(small) {
-    font-size: 16px;
+    font-size: 14px;
   }
 }
 
